# std_utrace

./: .gitignore  CMakeLists.txt  ReadMe.md  build_ndk.bat
inc/: utrace.h
src/: Android.mk  Application.mk  CMakeLists.txt  Prefix.h
src/Runtime/Profiler/: Backtracer.cpp  Backtracer.h  GrowOnlyLockFreeHash.h  Prefix.cpp  TraceAuxiliary.cpp  TraceAuxiliary.h
src/Runtime/Profiler/UTrace/: CounterTrace.h  FileTrace.h  GPUTrace.h  MemoryTrace.h
src/Runtime/TraceLog/Private/Trace/: BlockPool.cpp  Channel.cpp  Codec.cpp  Control.cpp  EventNode.cpp  Field.cpp  Platform.h  Tail.cpp  TlsBuffer.cpp  Trace.cpp  WriteBufferRedirect.h  Writer.cpp
src/Runtime/TraceLog/Private/Trace/Detail/Android/: AndroidTrace.cpp
src/Runtime/TraceLog/Private/Trace/Detail/Android/xhook/: xh_core.c  xhook.h
src/Runtime/TraceLog/Private/Trace/Detail/Apple/: AppleTrace.cpp
src/Runtime/TraceLog/Private/Trace/Detail/Unix/: UnixTrace.cpp
src/Runtime/TraceLog/Private/Trace/Detail/Windows/: WindowsTrace.cpp
src/Runtime/TraceLog/Private/Trace/Important/: Cache.cpp  SharedBuffer.cpp
src/Runtime/TraceLog/Public/Trace/: Config.h  Trace.h  Trace.inl
src/Runtime/TraceLog/Public/Trace/Detail/: Atomic.h  Channel.h  EventNode.h  Field.h  LogScope.h  LogScope.inl  Protocol.h  Trace.h
src/Runtime/TraceLog/Public/Trace/Detail/Important/: ImportantLogScope.h  ImportantLogScope.inl  SharedBuffer.h
src/mimalloc/include/: mimalloc-override.h
src/mimalloc/src/prim/unix/: prim.c
tests/: CMakeLists.txt  test_commandline.cpp  test_trace.cpp
